添加文章管理

--- a/blogDemo/index.html
+++ b/blogDemo/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link type="text/css" rel="stylesheet" href="css/index/index.css">
+    <link rel="stylesheet" href="css/index/index.css">
 </head>
 <body>
 
     <div class="main">
         <!-- topLeft -->
         <div class ="topLeft">
-            <div class="logo">
-                <div class="logoBox"><img class="logoImg" src="images/unicorn.png"/></div>
-                <div class="logoTitle">My blog</div>
-            </div>
+
         </div>
 
         <!-- topRight -->
@@ -23,30 +20,12 @@
 
         <!-- bottom letf -->
         <div class = bottomLeft>
-            <div class="nav">
-                <div class="navImgBox"><img class="navImg" src="images/nav/panel.png"/></div>
-                <div class="navTitle"><a href="#"><a>仪表盘</a></div>
-            </div>
-            <div class="nav">
-                <div class="navImgBox"><img class="navImg" src="images/nav/write.png"/></div>
-                <div class="navTitle"><a href="#"><a>发布文字</a></div>
-            </div>
-            <div class="nav">
-                <div class="navImgBox"><img class="navImg" src="images/nav/list.png"/></div>
-                <div class="navTitle"><a href="#"><a>文章管理</a></div>
-            </div>
-            <div class="nav">
-                <div class="navImgBox"><img class="navImg" src="images/nav/page.png"/></div>
-                <div class="navTitle"><a href="#"><a>页面管理</a></div>
-            </div>
-            <div class="nav">
-                <div class="navImgBox"><img class="navImg" src="images/nav/chat.png"/></div>
-                <div class="navTitle"><a href="#"><a>评论管理</a></div>
-            </div>
-            <div class="nav">
-                <div class="navImgBox"><img class="navImg" src="images/nav/tag.png"/></div>
-                <div class="navTitle"><a href="#"><a>标签/分类</a></div>
-            </div>
+           <ul>
+               <li>仪表盘</li>
+               <li>发布文章</li>
+               <li>文章管理</li>
+               <li>页面管理</li>
+           </ul>
         </div>
 
         <!-- bottom letf -->
